Closed Bug 1798560 Opened 3 years ago Closed 3 years ago

accessible/tests/browser/mac/browser_link.js FAIL Link 1 has no linked UI elements - Got 1, expected +0

Categories

(Core :: Disability Access APIs, defect)

Desktop
macOS
defect

Tracking

()

RESOLVED FIXED
108 Branch
Tracking Status
firefox108 --- fixed

People

(Reporter: morgan, Assigned: morgan)

References

Details

(Whiteboard: [ctw-m3])

Attachments

(1 file)

accessible/tests/browser/mac/browser_link.js
FAIL Link 1 has no linked UI elements - Got 1, expected +0
Stack trace:
chrome://mochikit/content/browser-test.js:test_is:1485
chrome://mochitests/content/browser/accessible/tests/browser/mac/browser_link.js:null:170
chrome://mochitests/content/browser/accessible/tests/browser/shared-head.js:accessibleTask/</<:554

Pushed by mreschenberg@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/3410b7dee250 Links with empty anchors should return an empty relation for LINKS_TO r=eeejay
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 108 Branch
Whiteboard: [ctw-m3]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: