Bug 1798560: Links with empty anchors should return an empty relation for LINKS_TO r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D160952